# primula

./: .gitignore  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  codeql.yml
primula/: __init__.py  __main__.py  _typing.py  cli.py  core.py  exception.py  lcov.py  plugin.py
scripts/: profile.py
tests/: base.py  test_cli.py  test_core.py  test_lcov.py  test_plugin.py
tests/profiles/: autoload.v7.4.txt  autoload.v8.1.0365.txt  autoload.v9.0.0000.txt  autoload.v9.0.1411.txt  dict.v7.4.txt  dict.v8.1.0365.txt  dict.v9.0.0000.txt  dict.v9.0.1411.txt  duplicate.v7.4.txt  duplicate.v8.1.0365.txt  duplicate.v9.0.0000.txt  duplicate.v9.0.1411.txt  execute.v7.4.txt  execute.v8.1.0365.txt  execute.v9.0.0000.txt  execute.v9.0.1411.txt  global.v7.4.txt  global.v8.1.0365.txt  global.v9.0.0000.txt  global.v9.0.1411.txt  lambda.v8.1.0365.txt  lambda.v9.0.0000.txt  lambda.v9.0.1411.txt  line_continuation.v7.4.txt  line_continuation.v8.1.0365.txt  line_continuation.v9.0.0000.txt  line_continuation.v9.0.1411.txt  nested.v7.4.txt  nested.v8.1.0365.txt  nested.v9.0.0000.txt  nested.v9.0.1411.txt  script_local.v7.4.txt  script_local.v8.1.0365.txt  script_local.v9.0.0000.txt  script_local.v9.0.1411.txt
tests/vimfiles/: autoload.vim  dict.vim  duplicate.vim  execute.vim  global.vim  lambda.vim  line_continuation.vim  nested.vim  script_local.vim  vimrc
tests/vimfiles/autoload/: autoload.vim
