[build-system]
requires = [
    "setuptools >= 77.0",
    "scmver[toml] >= 1.7",
]
build-backend = "setuptools.build_meta"

[project]
name = "primula"
description = "A code coverage tool for Vim script"
readme = "README.rst"
authors = [
    {name = "Akinori Hattori", email = "hattya@gmail.com"},
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
requires-python = ">= 3.10"
dependencies = [
    "coverage >= 5.0",
]
dynamic = [
    "version",
]

[project.scripts]
primula = "primula.cli:run"

[project.urls]
Homepage = "https://github.com/hattya/primula"

[tool.setuptools]
include-package-data = false
packages = [
    "primula",
]

[tool.setuptools.package-data]
primula = [
    "py.typed",
]

[tool.scmver]
spec = "micro"
write-to = "primula/__version__.py"
fallback = {attr = "primula:__version__"}

[tool.coverage.run]
branch = true
omit = [
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError:",
    "if coverage.version_info",
]

[tool.mypy]
implicit_reexport = true
strict = true

[[tool.mypy.overrides]]
module = "primula.cli"
disable_error_code = [
    "attr-defined",
    "misc",
    "no-redef",
]

[tool.ruff]
extend-exclude = [
    "vim-*",
]
line-length = 160

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "UP",
    "B0",
    "C4",
]
ignore = [
    "E74",
]

[tool.ruff.lint.per-file-ignores]
"primula/__init__.py" = [
    "F403",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
